# miconos

./: CMakeLists.txt  algorithm.hh  auto.hh  block.cc  block.hh  callstack.hh  ideas.txt  main.c  main.cc  maplock.hh  message.cc  message.hh  parse.hh  ply_io.c  ply_io.h  rendering.cc  rendering.hh  server.cc  socket.cc  socket.hh  util.cc  util.hh  voxel.txt  worldgen.cc
glfw/docs/: Doxyfile
glfw/src/: cmake_install.cmake
glm/detail/: func_geometric.inl
jansson/: jansson.h  jansson_config.h
kakao/: block.d  glfw3.d  hello.c  main.d  makefile
shaders/: block.frag  block.geom  block.vert  line.frag  line.vert  mesh.frag  mesh.vert  raytrace.frag  raytrace.vert  text.frag  text.vert
